--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#tmii">Tentang</a></li>
             <li><a href="#lkpd">LKPD</a></li>
             <li><a href="#galeri">Galeri</a></li>
-            <li><a href="#tentang">TMII</a></li>
+            <li><a href="#tentang">TMII </a></li>
             <li><a href="#kontak">Kontak</a></li>
         </ul>
         <button id="mode-toggle">🌙</button>
@@ -92,7 +92,26 @@
   </div>
   
 </section>
-    <section id="tmii" class="section">Tentang</section>
+    <section id="tentang" class="section tentang-section">
+  <h2>Tentang Website</h2>
+  <p class="tentang-desc">
+    Website ini dibuat sebagai media pembelajaran interaktif untuk mengenal lebih jauh tentang Taman Mini Indonesia Indah (TMII) beserta keberagaman budaya Indonesia.
+  </p>
+  <div class="tentang-container">
+    <div class="tentang-card">
+      <h3>Tujuan</h3>
+      <p>Memberikan informasi, edukasi, dan inspirasi kepada pengunjung mengenai sejarah, fasilitas, dan nilai-nilai budaya yang ada di TMII secara ringkas dan menarik.</p>
+    </div>
+    <div class="tentang-card">
+      <h3>Manfaat</h3>
+      <p>Pengunjung dapat memahami pentingnya pelestarian budaya, memperluas wawasan tentang Indonesia, serta memanfaatkan website sebagai sumber belajar yang mudah diakses.</p>
+    </div>
+    <div class="tentang-card">
+      <h3>Refleksi</h3>
+      <p>Melalui pembuatan website ini, kami belajar bekerja sama, mengembangkan kreativitas, serta meningkatkan kemampuan teknologi dan komunikasi dalam tim.</p>
+    </div>
+  </div>
+</section>
     <section id="lkpd" class="section grid-section">LKPD Section</section>
     <section id="galeri" class="section grid-section">Galeri Section</section>
     <section id="tentang" class="section">TMII</section>
