--- a/index.html
+++ b/index.html
@@ -277,22 +277,45 @@
   <h2 class="animate-element">Anjungan Kalimantan selatan</h2>
   <div class="scroll-container animate-element">
       <div class="scroll-content">
-          <img src="kalsel1.jpg" alt="Pemadam Kalsel 1" class="galeri-image">
-          <img src="kalsel2.jpg" alt="Pemadam Kalsel 2" class="galeri-image">
-          <img src="kalsel3.jpg" alt="Pemadam Kalsel 3" class="galeri-image">
-          <img src="kalsel4.jpg" alt="Pemadam Kalsel 4" class="galeri-image">
+          <img src="kalsel/IMG_6370.JPG" alt="Pemadam Kalsel 1" class="galeri-image">
+          <img src="kalsel/IMG_6371.JPG" alt="Pemadam Kalsel 2" class="galeri-image">
+          <img src="kalsel/IMG_6372.JPG" alt="Pemadam Kalsel 3" class="galeri-image">
+          <img src="kalsel/IMG_6374.JPG" alt="Pemadam Kalsel 4" class="galeri-image"> 
+          <img src="kalsel/IMG_6379.JPG" alt="Pemadam Kalsel 4" class="galeri-image"> 
+          <img src="kalsel/IMG_6383.JPG" alt="Pemadam Kalsel 4" class="galeri-image"> 
+          <img src="kalsel/IMG_6384.JPG" alt="Pemadam Kalsel 4" class="galeri-image"> 
+          <img src="kalsel/IMG_6389.JPG" alt="Pemadam Kalsel 4" class="galeri-image"> 
       </div>
   </div>
 </section>
 
 <section id="galeri-pemadam-kaltim" class="section galeri-pemadam-section">
-  <h2 class="animate-element">Anjungan Kalimantan-timus</h2>
+  <h2 class="animate-element">Anjungan Kalimantan-timur</h2>
   <div class="scroll-container animate-element">
       <div class="scroll-content">
-          <img src="kaltim1.jpg" alt="Pemadam Kaltim 1" class="galeri-image">
-          <img src="kaltim2.jpg" alt="Pemadam Kaltim 2" class="galeri-image">
-          <img src="kaltim3.jpg" alt="Pemadam Kaltim 3" class="galeri-image">
-          <img src="kaltim4.jpg" alt="Pemadam Kaltim 4" class="galeri-image">
+          <img src="kaltim/IMG_6396.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6397.JPG" alt="Pemadam Kaltim 2" class="galeri-image">
+          <img src="kaltim/IMG_6398.JPG" alt="Pemadam Kaltim 3" class="galeri-image">          <img src="kaltim/IMG_6401.JPG" alt="Pemadam Kaltim 6" class="galeri-image">
+          <img src="kaltim/IMG_6408.JPG" alt="Pemadam Kaltim 7" class="galeri-image">
+          <img src="kaltim/IMG_6409.JPG" alt="Pemadam Kaltim 8" class="galeri-image">
+          <img src="kaltim/IMG_6412.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6414.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6418.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6421.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6428.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6430.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6433.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6435.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6439.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6449.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6452.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6456.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6457.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6461.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6477.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+          <img src="kaltim/IMG_6484.JPG" alt="Pemadam Kaltim 1" class="galeri-image">
+
+
       </div>
   </div>
 </section>
