--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="team-card animate-element">
             <img src="WhatsApp Image 2025-06-03 at 20.36.50_ff144f50.jpg" alt="Anggota 1" class="small-image animate-element">
             <h3 class="animate-element">Joshua Benjamin Rompis</h3>
-            <p class="animate-element">Pembuat Website, Makalah</p>
+            <p>Pembuat Website, Makalah</p>
         </div>
         <div class="team-card animate-element">
             <img src="WhatsApp Image 2025-06-01 at 19.04.20_06db24d6.jpg" alt="Anggota 2" class="animate-element">
