--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <section id="kontak" class="section kontak-section">
   <h2 style="color: white;">Kontak</h2>
   <div class="kontak-container">
-    <form class="kontak-form">
+    <form id="kontakForm" class="kontak-form" action="https://formspree.io/f/mjkrvdvr" method="POST">
       <label for="name">Nama:</label>
       <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required>
       
@@ -334,6 +334,7 @@
       
       <button type="submit" class="submit-btn">Kirim</button>
     </form>
+
     <div class="maps-container">
       <h3 style=" color: white;">Lokasi Kami</h3>
       <iframe 
