--- a/index.html
+++ b/index.html
@@ -196,13 +196,24 @@
           <h2 style="text-align:center; margin-bottom:40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
             Pelajaran Sejarah: Museum & Anjungan
           </h2>
-          <p
-            style="max-width:800px; margin:0 auto; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-            Pada pagi hari pelaksanaan, sekitar pukul 06.00, seluruh peserta outing class berkumpul di lapangan sekolah dengan penuh semangat. Setelah absen dan pemeriksaan denyut nadi selesai, kami naik ke dalam bus satu per satu, mempersiapkan diri untuk perjalanan yang sudah kami nantikan.
-Di dalam bus, kami disambut oleh tour guide yang memperkenalkan diri dengan ramah. Sambil membagikan snack untuk bekal di perjalanan, ia mulai menceritakan hal-hal menarik seputar rute yang kami lalui. Salah satu yang menarik perhatian adalah Jalan TB Simatupang. Kami diberi tahu bahwa jalan ini dinamai dari nama Tahi Bonar Simatupang, seorang pahlawan nasional yang berperan penting dalam sejarah militer Indonesia. TB Simatupang adalah Kepala Staf Angkatan Perang Republik Indonesia pada awal 1950-an, yang dikenal karena pemikirannya mengenai reformasi militer dan upayanya menjadikan TNI sebagai kekuatan profesional, bukan alat politik. Ia juga dikenal sebagai seorang pemikir Kristen yang terlibat aktif dalam pembangunan bangsa setelah pensiun dari militer.
-Sepanjang perjalanan, tour guide menunjuk berbagai bangunan penting yang kami lewati, seperti gedung Kementerian Pertanian — lembaga yang telah ada sejak masa Hindia Belanda, dulu berperan mengurus perkebunan dan hasil bumi, sekarang menangani sektor pertanian nasional. Kami juga melewati RSUP Fatmawati, rumah sakit yang bersejarah karena dibangun atas inisiatif Fatmawati, istri Presiden Soekarno, untuk membantu kesehatan rakyat Indonesia, terutama bagi mereka yang menderita tuberkulosis. Di kawasan Pasar Minggu, tour guide menjelaskan bahwa dulunya daerah ini adalah pusat perdagangan buah dan sayur sejak zaman kolonial, terkenal dengan kebun-kebunnya yang luas. Sekarang, Pasar Minggu berkembang menjadi salah satu kawasan padat yang strategis di Jakarta Selatan, menjadi jalur penghubung utama antarwilayah.
-</p>
-        
+          <div class="history-intro animate-element" style="
+            background: #fff;
+            border-radius: 18px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+            padding: 32px 24px;
+            margin: 0 auto 40px auto;
+            max-width: 800px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #222;
+            line-height: 1.7;
+            font-size: 1.08rem;
+          ">
+            <p style="margin-bottom: 0;">
+              Pada pagi hari pelaksanaan, sekitar pukul 06.00, seluruh peserta outing class berkumpul di lapangan sekolah dengan penuh semangat. Setelah absen dan pemeriksaan denyut nadi selesai, kami naik ke dalam bus satu per satu, mempersiapkan diri untuk perjalanan yang sudah kami nantikan.<br><br>
+              Di dalam bus, kami disambut oleh tour guide yang memperkenalkan diri dengan ramah. Sambil membagikan snack untuk bekal di perjalanan, ia mulai menceritakan hal-hal menarik seputar rute yang kami lalui. Salah satu yang menarik perhatian adalah Jalan TB Simatupang. Kami diberi tahu bahwa jalan ini dinamai dari nama Tahi Bonar Simatupang, seorang pahlawan nasional yang berperan penting dalam sejarah militer Indonesia. TB Simatupang adalah Kepala Staf Angkatan Perang Republik Indonesia pada awal 1950-an, yang dikenal karena pemikirannya mengenai reformasi militer dan upayanya menjadikan TNI sebagai kekuatan profesional, bukan alat politik. Ia juga dikenal sebagai seorang pemikir Kristen yang terlibat aktif dalam pembangunan bangsa setelah pensiun dari militer.<br><br>
+              Sepanjang perjalanan, tour guide menunjuk berbagai bangunan penting yang kami lewati, seperti gedung Kementerian Pertanian — lembaga yang telah ada sejak masa Hindia Belanda, dulu berperan mengurus perkebunan dan hasil bumi, sekarang menangani sektor pertanian nasional. Kami juga melewati RSUP Fatmawati, rumah sakit yang bersejarah karena dibangun atas inisiatif Fatmawati, istri Presiden Soekarno, untuk membantu kesehatan rakyat Indonesia, terutama bagi mereka yang menderita tuberkulosis. Di kawasan Pasar Minggu, tour guide menjelaskan bahwa dulunya daerah ini adalah pusat perdagangan buah dan sayur sejak zaman kolonial, terkenal dengan kebun-kebunnya yang luas. Sekarang, Pasar Minggu berkembang menjadi salah satu kawasan padat yang strategis di Jakarta Selatan, menjadi jalur penghubung utama antarwilayah.
+            </p>
+          </div>
           <div class="container-atas">
             <!-- Museum Pemadam -->
             <a href="pemadam.html" class="history-link">
