--- a/kalsel.html
+++ b/kalsel.html
@@ -32,28 +32,40 @@
     </nav>
 
     <!-- Konten Utama -->
-    <main class="section sejarah-section" style="padding-top:120px; padding-bottom:80px;">
-        <h1 class="section-title">Anjungan Kalimantan Selatan</h1>
-        <p style="max-width:800px; margin:0 auto 32px auto; font-size:1.1rem; line-height:1.8;">
-            <!-- Tulis teks sejarah panjang di sini. Contoh: -->
-Jalan-jalan ke Anjungan Kalimantan Selatan rasanya seperti diajak masuk ke dunia yang berbeda. Yang pertama kali bikin takjub adalah Rumah Bubungan Tinggi yang berdiri dengan gagahnya. Atapnya yang runcing menjulang tinggi itu bukan cuma biar kelihatan keren aja, tapi ternyata punya makna yang dalam banget. Kata pemandu di sana, bentuk atap yang disebut bubungan ini melambangkan kedekatan kita sama Yang Maha Kuasa - kayak mengingatkan kita bahwa hidup ini selalu ada yang mengawasi dari atas.
-Yang bikin makin kagum adalah ukiran-ukiran di pilar kayunya. Detail banget! Ada motif bunga teratai, kangkung, sampai burung enggang yang digambar dengan indahnya. Setiap ukiran punya cerita tersendiri tentang kehidupan masyarakat Banjar. Terus ada tangga di depan yang namanya janjang sambutan - dari namanya aja udah keliatan ya kalau masyarakat Banjar itu orangnya ramah dan suka menyambut tamu dengan hangat. Warna-warnanya juga eye-catching banget! Kuning, hijau, merah yang cerah - katanya sih ini warna-warna kerajaan dulu yang bikin rumah ini kelihatan mewah dan berwibawa. Ternyata rumah ini bukan sembarangan rumah. Dulu, sekitar abad ke-16, ini adalah tempat tinggal para bangsawan Kesultanan Banjar. Desainnya campuran dari arsitektur Jawa (Majapahit) dan Melayu, tapi disesuaikan sama iklim Kalimantan yang lembap. 
-            <br><br>
-Yang menarik lagi, tata ruangnya ada aturannya. Ada ruang palimasan buat keluarga inti, ruang paluaran buat terima tamu. Jadi keliatan deh kalau dulu ada tata krama dan hierarki sosial yang jelas dalam masyarakat Banjar. Anjungan ini dibangun tahun 1975 sebagai bagian dari proyek Bu Tien Soeharto untuk melestarikan budaya Indonesia. Sekarang jadi tempat yang penting banget buat kita belajar dan menghargai warisan nenek moyang. Rasanya sedih kalau sampai generasi sekarang gak tau lagi tentang kekayaan budaya kayak gini.            </br><br>
-            1)	Asal-Usul Arsitektur: Rumah Bubungan Tinggi awalnya adalah rumah aristokrat Kesultanan Banjar (abad ke-16). Desainnya dipengaruhi oleh arsitektur Jawa (Majapahit) dan Melayu, dengan adaptasi iklim tropis basah Kalimantan.
-            <br>
-2)	Filosofi: Bubungan tinggi melambangkan hubungan manusia dengan alam dan Tuhan. Ruangan dibagi berdasarkan hierarki sosial, seperti Palimasan (ruang keluarga) dan Paluaran (ruang tamu). </br>
-<br>3)	TMII & Pelestarian: Anjungan dibangun tahun 1975 sebagai bagian dari proyek nasional Ibu Tien Soeharto untuk memamerkan keanekaragaman budaya Indonesia. Kalsel dipilih karena perannya sebagai pusat budaya Borneo yang berpadu dengan Islam. </br></p>
-
-            <!-- Tambahkan paragraf sejarah lainnya sesuai kebutuhan -->
-        </br>
-        </p>
-        <div class="sejarah-gallery" style="display:flex; flex-wrap:wrap; gap:24px; justify-content:center;">
-            <img src="kalsel/IMG_6372.JPG" alt="Museum Pemadam" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-            <img src="IMG_6389.JPG" alt="Koleksi Museum" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-            <img src="kalsel/IMG_6371.JPG" alt="Koleksi Museum" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-            <img src="kalsel/IMG_6374.JPG" alt="Koleksi Museum" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-            <!-- Tambahkan foto lain sesuai kebutuhan -->
+    <main class="section sejarah-section" style="padding-top:120px; padding-bottom:80px; background: #f8fafc;">
+        <div style="max-width:900px; margin:0 auto; background:#fff; border-radius:18px; box-shadow:0 6px 32px rgba(0,0,0,0.07); padding:48px 32px;">
+            <h1 class="section-title" style="text-align:center; font-size:2.5rem; margin-bottom:24px; letter-spacing:1px; color:#f1c40f;">Anjungan Kalimantan Selatan</h1>
+            <p style="max-width:800px; margin:0 auto 32px auto; font-size:1.13rem; line-height:1.85; color:#222;">
+                Jalan-jalan ke Anjungan Kalimantan Selatan rasanya seperti diajak masuk ke dunia yang berbeda. Yang pertama kali bikin takjub adalah Rumah Bubungan Tinggi yang berdiri dengan gagahnya. Atapnya yang runcing menjulang tinggi itu bukan cuma biar kelihatan keren aja, tapi ternyata punya makna yang dalam banget. Kata pemandu di sana, bentuk atap yang disebut bubungan ini melambangkan kedekatan kita sama Yang Maha Kuasa - kayak mengingatkan kita bahwa hidup ini selalu ada yang mengawasi dari atas.
+                <br><br>
+                Yang bikin makin kagum adalah ukiran-ukiran di pilar kayunya. Detail banget! Ada motif bunga teratai, kangkung, sampai burung enggang yang digambar dengan indahnya. Setiap ukiran punya cerita tersendiri tentang kehidupan masyarakat Banjar. Terus ada tangga di depan yang namanya janjang sambutan - dari namanya aja udah keliatan ya kalau masyarakat Banjar itu orangnya ramah dan suka menyambut tamu dengan hangat. Warna-warnanya juga eye-catching banget! Kuning, hijau, merah yang cerah - katanya sih ini warna-warna kerajaan dulu yang bikin rumah ini kelihatan mewah dan berwibawa.
+                <br><br>
+                Ternyata rumah ini bukan sembarangan rumah. Dulu, sekitar abad ke-16, ini adalah tempat tinggal para bangsawan Kesultanan Banjar. Desainnya campuran dari arsitektur Jawa (Majapahit) dan Melayu, tapi disesuaikan sama iklim Kalimantan yang lembap.
+                <br><br>
+                Yang menarik lagi, tata ruangnya ada aturannya. Ada ruang palimasan buat keluarga inti, ruang paluaran buat terima tamu. Jadi keliatan deh kalau dulu ada tata krama dan hierarki sosial yang jelas dalam masyarakat Banjar. Anjungan ini dibangun tahun 1975 sebagai bagian dari proyek Bu Tien Soeharto untuk melestarikan budaya Indonesia. Sekarang jadi tempat yang penting banget buat kita belajar dan menghargai warisan nenek moyang. Rasanya sedih kalau sampai generasi sekarang gak tau lagi tentang kekayaan budaya kayak gini.
+                <br><br>
+                <b>1) Asal-Usul Arsitektur:</b> Rumah Bubungan Tinggi awalnya adalah rumah aristokrat Kesultanan Banjar (abad ke-16). Desainnya dipengaruhi oleh arsitektur Jawa (Majapahit) dan Melayu, dengan adaptasi iklim tropis basah Kalimantan.
+                <br>
+                <b>2) Filosofi:</b> Bubungan tinggi melambangkan hubungan manusia dengan alam dan Tuhan. Ruangan dibagi berdasarkan hierarki sosial, seperti Palimasan (ruang keluarga) dan Paluaran (ruang tamu).
+                <br>
+                <b>3) TMII & Pelestarian:</b> Anjungan dibangun tahun 1975 sebagai bagian dari proyek nasional Ibu Tien Soeharto untuk memamerkan keanekaragaman budaya Indonesia. Kalsel dipilih karena perannya sebagai pusat budaya Borneo yang berpadu dengan Islam.
+            </p>
+            <div class="sejarah-gallery" style="display:flex; flex-wrap:wrap; gap:28px; justify-content:center; margin-bottom:32px;">
+                <img src="kalsel/IMG_6372.JPG" alt="Rumah Bubungan Tinggi" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+                <img src="IMG_6389.JPG" alt="Detail Ukiran" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+                <img src="kalsel/IMG_6371.JPG" alt="Tata Ruang" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+                <img src="kalsel/IMG_6374.JPG" alt="Tangga Sambutan" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+            </div>
+            <div style="background:#f2f4f8; border-radius:12px; padding:24px 20px; max-width:700px; margin:0 auto;">
+                <h2 style="font-size:1.3rem; color:#f1c40f; margin-bottom:14px; text-align:center; letter-spacing:0.5px;">Fakta Menarik Anjungan Kalsel</h2>
+                <ul style="list-style:square inside; color:#333; font-size:1.08rem; line-height:1.8; padding-left:0;">
+                    <li>Rumah Bubungan Tinggi adalah ikon arsitektur Banjar yang diakui secara nasional.</li>
+                    <li>Motif ukiran di rumah ini sarat makna filosofis dan sejarah.</li>
+                    <li>Setiap warna dan bentuk pada rumah punya arti tersendiri dalam budaya Banjar.</li>
+                    <li>Anjungan ini menjadi pusat pelestarian budaya Banjar di TMII.</li>
+                    <li>Sering dijadikan lokasi festival budaya dan edukasi untuk pelajar.</li>
+                </ul>
+            </div>
         </div>
     </main>
 
