--- a/pemadam.html
+++ b/pemadam.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sejarah dan dokumentasi TMII">
-    <title>Museun Pemadam</title>
+    <title>Museum Pemadam</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div id="opening-overlay">
         <div class="opening-content">
             <h1>Welcome to</h1>
-            <p>Taman Mini Indonesia Indah Web Project (Museun Pemadam)</p>
+            <p>Taman Mini Indonesia Indah Web Project (Museum Pemadam)</p>
         </div>
     </div>
 
@@ -32,31 +32,32 @@
     </nav>
 
     <!-- Konten Utama -->
-    <main class="section sejarah-section" style="padding-top:120px; padding-bottom:80px;">
-        <h1 class="section-title">Museum Pemadam</h1>
-        <p style="max-width:800px; margin:0 auto 32px auto; font-size:1.1rem; line-height:1.8;">
-            <!-- Tulis teks sejarah panjang di sini. Contoh: -->
-Setibanya di Taman Mini Indonesia Indah (TMII), tujuan pertama kami adalah Museum Pemadam yang berada di dalam kawasan TMII. Museum Pemadam Kebakaran TMII, yang terletak di kawasan Taman Mini Indonesia Indah (TMII), Jakarta Timur, merupakan satu-satunya museum di Indonesia yang didedikasikan untuk sejarah dan perkembangan pemadam kebakaran. Diresmikan pada 1 Maret 2015, museum ini berada di dalam kompleks Pos Pemadam Kebakaran Sektor 9 TMII dan dikelola oleh Dinas Penanggulangan Kebakaran dan Penyelamatan Provinsi DKI Jakarta. Museum ini menyajikan informasi mengenai evolusi layanan pemadam kebakaran di Jakarta, mulai dari era kolonial Belanda hingga masa kini. Pada masa kolonial, layanan ini dikenal dengan nama "Brandweer," yang kemudian berubah menjadi "Barisan Pemadam Kebakaran" setelah kemerdekaan, dan kini dikenal sebagai Dinas Penanggulangan Kebakaran dan Penyelamatan Provinsi DKI Jakarta            <br><br>
-            Pada awal berdirinya, museum ini bertujuan untuk mengedukasi masyarakat tentang pentingnya peran pemadam kebakaran dalam kehidupan sehari-hari. Koleksi yang paling menarik adalah mobil pemadam tua, helm-helm klasik, serta prasasti Brandweer Batavia 1929 yang menjadi saksi sejarah perkembangan pemadam kebakaran di Jakarta.
-            <br>Museum ini tidak hanya menampilkan koleksi sejarah, tetapi juga berfungsi sebagai pusat edukasi. Pengunjung, terutama pelajar, dapat belajar tentang pentingnya pencegahan kebakaran dan peran vital petugas pemadam kebakaran dalam masyarakat. Di lantai dua museum, sering diadakan sosialisasi dan edukasi mengenai penanggulangan kebakaran untuk siswa-siswi dari berbagai sekolah.<br>
-            <!-- Tambahkan paragraf sejarah lainnya sesuai kebutuhan -->
-        </p>
-        <div class="sejarah-gallery" style="display:flex; flex-wrap:wrap; gap:24px; justify-content:center;">
-            <img src="IMG_20250522_102702_367.jpg" alt="Museum Pemadam" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-            <img src="pemadam/IMG_20250522_101845_561.jpg" alt="Koleksi Museum" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-            <p>Beberapa koleksi penting yang dapat ditemukan di museum ini antara lain:
-            <ul>
-                <li>Mobil pemadam kebakaran klasik dari berbagai era</li>
-                <li>Helm-helm pemadam kebakaran dari masa lalu</li>
-                <li>Peralatan pemadam kebakaran tradisional dan modern</li>
-                <li>Dokumentasi sejarah pemadam kebakaran di Jakarta</li>
-                <li>Prasasti Brandweer Batavia 1929 yang menjadi simbol sejarah pemadam kebakaran di Indonesia</li>
-            </ul>
+    <main class="section sejarah-section" style="padding-top:120px; padding-bottom:80px; background: #f8fafc;">
+        <div style="max-width:900px; margin:0 auto; background:#fff; border-radius:18px; box-shadow:0 6px 32px rgba(0,0,0,0.07); padding:48px 32px;">
+            <h1 class="section-title" style="text-align:center; font-size:2.5rem; margin-bottom:24px; letter-spacing:1px; color:#d7263d;">Museum Pemadam</h1>
+            <p style="max-width:800px; margin:0 auto 32px auto; font-size:1.13rem; line-height:1.85; color:#222;">
+                Setibanya di Taman Mini Indonesia Indah (TMII), tujuan pertama kami adalah Museum Pemadam yang berada di dalam kawasan TMII. Museum Pemadam Kebakaran TMII, yang terletak di kawasan Taman Mini Indonesia Indah (TMII), Jakarta Timur, merupakan satu-satunya museum di Indonesia yang didedikasikan untuk sejarah dan perkembangan pemadam kebakaran. Diresmikan pada 1 Maret 2015, museum ini berada di dalam kompleks Pos Pemadam Kebakaran Sektor 9 TMII dan dikelola oleh Dinas Penanggulangan Kebakaran dan Penyelamatan Provinsi DKI Jakarta. Museum ini menyajikan informasi mengenai evolusi layanan pemadam kebakaran di Jakarta, mulai dari era kolonial Belanda hingga masa kini. Pada masa kolonial, layanan ini dikenal dengan nama "Brandweer," yang kemudian berubah menjadi "Barisan Pemadam Kebakaran" setelah kemerdekaan, dan kini dikenal sebagai Dinas Penanggulangan Kebakaran dan Penyelamatan Provinsi DKI Jakarta.
+                <br><br>
+                Pada awal berdirinya, museum ini bertujuan untuk mengedukasi masyarakat tentang pentingnya peran pemadam kebakaran dalam kehidupan sehari-hari. Koleksi yang paling menarik adalah mobil pemadam tua, helm-helm klasik, serta prasasti Brandweer Batavia 1929 yang menjadi saksi sejarah perkembangan pemadam kebakaran di Jakarta.
+                <br><br>
+                Museum ini tidak hanya menampilkan koleksi sejarah, tetapi juga berfungsi sebagai pusat edukasi. Pengunjung, terutama pelajar, dapat belajar tentang pentingnya pencegahan kebakaran dan peran vital petugas pemadam kebakaran dalam masyarakat. Di lantai dua museum, sering diadakan sosialisasi dan edukasi mengenai penanggulangan kebakaran untuk siswa-siswi dari berbagai sekolah.
             </p>
-            <!-- Tambahkan foto lain sesuai kebutuhan -->
-            <img src="pemadam/IMG_20250522_101853_790.jpg" alt="Museum Pemadam" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-            <img src="pemadam/IMG_20250522_102647_313.jpg" alt="Museum Pemadam" style="max-width:320px; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.08);">
-
+            <div class="sejarah-gallery" style="display:flex; flex-wrap:wrap; gap:28px; justify-content:center; margin-bottom:32px;">
+                <img src="IMG_20250522_102702_367.jpg" alt="Museum Pemadam" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+                <img src="pemadam/IMG_20250522_101845_561.jpg" alt="Koleksi Museum" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+                <img src="pemadam/IMG_20250522_101853_790.jpg" alt="Museum Pemadam" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+                <img src="pemadam/IMG_20250522_102647_313.jpg" alt="Museum Pemadam" style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 4px 16px rgba(0,0,0,0.10); object-fit:cover;">
+            </div>
+            <div style="background:#f2f4f8; border-radius:12px; padding:24px 20px; max-width:700px; margin:0 auto;">
+                <h2 style="font-size:1.3rem; color:#d7263d; margin-bottom:14px; text-align:center; letter-spacing:0.5px;">Koleksi Penting Museum</h2>
+                <ul style="list-style:square inside; color:#333; font-size:1.08rem; line-height:1.8; padding-left:0;">
+                    <li>Mobil pemadam kebakaran klasik dari berbagai era</li>
+                    <li>Helm-helm pemadam kebakaran dari masa lalu</li>
+                    <li>Peralatan pemadam kebakaran tradisional dan modern</li>
+                    <li>Dokumentasi sejarah pemadam kebakaran di Jakarta</li>
+                    <li>Prasasti Brandweer Batavia 1929 yang menjadi simbol sejarah pemadam kebakaran di Indonesia</li>
+                </ul>
+            </div>
         </div>
     </main>
 
