--- a/index.html
+++ b/index.html
@@ -357,22 +357,21 @@
       <textarea id="message" name="message" placeholder="Tulis saran atau masukan Anda" rows="5" required></textarea>
       
       <button type="submit" class="submit-btn">Kirim</button>
-    </form>      </iframe>
+    </form>
 
-    <div class="maps-container">>
-      <h3 style=" color: white;">Lokasi Kami</h3>on>
-
-
-
-
-
-
-
-
-
-
-
-</html></body>    <script src="script.js"></script>        loading="lazy">        allowfullscreen=""         style="border:0;"         height="300"         width="100%"         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.680928279529!2d106.853209829217!3d-6.2388249999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e6c6b5b4c7%3A0x8f8e4c8c8c8c8c8c!2sSMKN%208%20Jakarta!5e0!3m2!1sen!2sid!4v1634567890123!5m2!1sen!2sid"       <iframe 
-    <script src="script.js"></script>
+    <div class="maps-container">
+      <h3 style="color: white;">Lokasi Kami</h3>
+      <iframe
+        loading="lazy"
+        allowfullscreen=""
+        style="border:0;"
+        height="300"
+        width="100%"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.680928279529!2d106.853209829217!3d-6.2388249999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e6c6b5b4c7%3A0x8f8e4c8c8c8c8c8c!2sSMKN%208%20Jakarta!5e0!3m2!1sen!2sid!4v1634567890123!5m2!1sen!2sid">
+      </iframe>
+    </div>
+  </div>
+</section>
+<script src="script.js"></script>
 </body>
 </html>
