--- a/index.html
+++ b/index.html
@@ -289,10 +289,14 @@
   <h2 class="animate-element">Museum Pemadam</h2>
   <div class="scroll-container animate-element">
       <div class="scroll-content">
-          <img src="kalsel1.jpg" alt="Pemadam Kalsel 1" class="galeri-image">
-          <img src="kalsel2.jpg" alt="Pemadam Kalsel 2" class="galeri-image">
-          <img src="kalsel3.jpg" alt="Pemadam Kalsel 3" class="galeri-image">
-          <img src="kalsel4.jpg" alt="Pemadam Kalsel 4" class="galeri-image">
+          <img src="pemadam/IMG_20250522_101845_561.jpg" alt="Pemadam Kalsel 1" class="galeri-image">
+          <img src="pemadam/IMG_20250522_101853_790.jpg" alt="Pemadam Kalsel 2" class="galeri-image">
+          <img src="pemadam/IMG_20250522_102647_313.jpg" alt="Pemadam Kalsel 3" class="galeri-image">
+          <img src="IMG_20250522_102702_367.jpg" alt="Pemadam Kalsel 4" class="galeri-image">
+          <img src="pemadam/IMG_20250522_091037_1.jpg" alt="Pemadam Kalsel 5" class="galeri-image">
+          <img src="pemadam/IMG_20250522_101836_405.jpg" alt="Pemadam Kalsel 6" class="galeri-image">
+          <img src="pemadam/IMG_20250522_101953_004.jpg" alt="Pemadam Kalsel 7" class="galeri-image">
+          <img src="pemadam/WhatsApp Image 2025-06-04 at 09.20.50_8f8ad066.jpg" alt="Pemadam Kalsel 8" class="galeri-image">
       </div>
   </div>
 </section>
